--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -4383,7 +4383,8 @@ header {
   pointer-events: none;
 }
 #about2 {
-  margin-top: 13%;
+  margin-top: 23%;
+  margin-bottom: 20%;
 }
 #about2 .container .he {
   padding: 20px 0;
@@ -7804,7 +7805,7 @@ header {
 }
 /* services */
 #services {
-  padding: 5rem 5rem;
+  padding: 7rem 5rem;
 }
 .accordion-container {
   width: 100%;
@@ -7820,16 +7821,18 @@ header {
   letter-spacing: 6px;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-color: #2b2b2b;
-  -webkit-text-stroke: 1px;
+  -webkit-text-stroke: 2px;
   padding-left: 52px;
   stroke: #2B2B2B;
   color: #2b2b2b;
 }
 .accordion-title h2 span {
-  font-size: 0.4em;
+  font-size: 0.3em;
   letter-spacing: 2px;
   position: absolute;
-  left: 7px;
+  -webkit-text-stroke: 1px;
+  left: 23px;
+  top: 40px;
 }
 .accordion-list li {
   border-bottom: 2px solid #2b2b2b;
@@ -8979,7 +8982,7 @@ section.horizontal .animation-wrap.to-left {
 }
 @media screen and (max-width: 1440px) {
   .works__hero__line {
-    line-height: 0.9;
+    line-height: 1.06;
   }
 }
 @media screen and (max-width: 1367px) {
@@ -8989,7 +8992,7 @@ section.horizontal .animation-wrap.to-left {
 }
 @media screen and (max-width: 1280px) {
   .works__hero__line {
-    font-size: 10.7em;
+    font-size: 10em;
   }
   .services-s .image {
     width: 35%;
@@ -9126,7 +9129,7 @@ section.horizontal .animation-wrap.to-left {
     margin-left: 19%;
   }
   #services {
-    padding: 5rem 1rem;
+    padding: 7rem 5rem;
   }
   #services .accordion-title {
     padding: 40px 0;
@@ -12963,6 +12966,7 @@ section.horizontal .animation-wrap.to-left {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-left: 220px;
 }
 .ar-work {
   display: block;
