--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -93,7 +93,7 @@
 // }
 /* services */
 #services {
-  padding: 5rem 5rem;
+  padding: 7rem 5rem;
 }
 
 
@@ -113,17 +113,19 @@
   letter-spacing: 6px;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-color: #2b2b2b;
-  -webkit-text-stroke: 1px;
+  -webkit-text-stroke: 2px;
   padding-left: 52px;
   stroke: #2B2B2B;
   color: #2b2b2b;
 }
 
 .accordion-title h2 span {
-  font-size: .4em;
+  font-size: .3em;
   letter-spacing: 2px;
   position: absolute;
-  left: 7px;
+  -webkit-text-stroke: 1px;
+  left: 23px;
+  top: 40px;
 }
 
 .accordion-list li {
@@ -1483,7 +1485,7 @@ section.horizontal .animation-wrap.to-left {
 
 @media screen and (max-width:1440px) {
   .works__hero__line {
-    line-height: 0.9;
+    line-height: 1.06;
   }
 }
 
@@ -1497,7 +1499,7 @@ section.horizontal .animation-wrap.to-left {
 @media screen and (max-width:1280px) {
 
   .works__hero__line {
-    font-size: 10.7em;
+    font-size: 10em;
   }
 
   .services-s .image {
@@ -1657,7 +1659,7 @@ section.horizontal .animation-wrap.to-left {
   }
 
   #services {
-    padding: 5rem 1rem;
+    padding: 7rem 5rem;
 
     .accordion-title {
       padding: 40px 0;
